# global-weather-analysis

./: global-monthly-temp-1850-2020.csv  krakow-daily-weather-si.csv  krakow-monthly-temp-1824-2020.csv  poland-monthly-temp-1750-2020.csv  pyproject.toml
